# ROS2Weaver

./: .gitignore  Architecture.md  CHANGELOG.md  ERRORS.md  LICENSE  README.md  ROADMAP.md  ROS Weaver Development Plan.md  reel-video.md
src/ros_weaver/: CMakeLists.txt  package.xml
src/ros_weaver/doc/: ekf_analyzer_cli.md
src/ros_weaver/examples/: sample_behavior_tree.xml
src/ros_weaver/examples/behavior_tree_patrol/: behavior_tree_patrol.rwp  patrol_behavior.xml
src/ros_weaver/examples/turtlebot3_navigation/: nav2_params.yaml  slam_toolbox_params.yaml  turtlebot3_navigation.rwp
src/ros_weaver/examples/turtlesim_teleop/: turtlesim_teleop.rwp
src/ros_weaver/include/ros_weaver/: main_window.hpp
src/ros_weaver/include/ros_weaver/canvas/: canvas_annotation.hpp  connection_line.hpp  node_group.hpp  package_block.hpp  weaver_canvas.hpp
src/ros_weaver/include/ros_weaver/cli/: ekf_analyzer_cli.hpp
src/ros_weaver/include/ros_weaver/core/: ai_context_provider.hpp  ai_error_advisor.hpp  ai_tool_manager.hpp  architecture_diff.hpp  architecture_doc_generator.hpp  architecture_generator.hpp  architecture_optimizer.hpp  bag_manager.hpp  bag_recorder.hpp  behavior_tree_parser.hpp  canvas_mapper.hpp  caret_importer.hpp  code_generator.hpp  constants.hpp  context_help.hpp  data_lineage.hpp  dot_importer.hpp  ekf_config.hpp  ekf_metrics_analyzer.hpp  ekf_parameter_sweep.hpp  ekf_simulation_engine.hpp  error_handler.hpp  external_editor.hpp  generic_message_handler.hpp  git_integration.hpp  graph_exporter.hpp  latency_tracker.hpp  launch_file_generator.hpp  layout_algorithms.hpp  lifecycle_manager.hpp  lineage_provider.hpp  live_param_validator.hpp  mcp_manager.hpp  mcp_providers.hpp  mcp_server.hpp  mcp_types.hpp  mission_data.hpp  nav2_exporter.hpp  network_topology_manager.hpp  node_health_monitor.hpp  (+22 more)
src/ros_weaver/include/ros_weaver/core/undo/: command_ids.hpp  mission_undo_commands.hpp  mission_undo_stack.hpp  scenario_undo_commands.hpp  scenario_undo_stack.hpp  undo_command.hpp  undo_stack.hpp  urdf_undo_commands.hpp
src/ros_weaver/include/ros_weaver/widgets/: advanced_search_panel.hpp  ai_permission_dialog.hpp  architecture_doc_dialog.hpp  behavior_tree_panel.hpp  bookmark_manager.hpp  bt_node_item.hpp  canvas_tab_widget.hpp  command_palette.hpp  connection_stats_dialog.hpp  diagnostics_panel.hpp  diff_view_dialog.hpp  dock_drop_overlay.hpp  ekf_config_editor.hpp  ekf_path_visualizer.hpp  ekf_results_panel.hpp  ekf_tuner_panel.hpp  empty_state.hpp  guided_tour.hpp  help_browser.hpp  issue_list_panel.hpp  joint_properties_widget.hpp  keyboard_shortcuts_dialog.hpp  latency_heatmap_panel.hpp  launch_preview_dialog.hpp  lifecycle_panel.hpp  lineage_dialog.hpp  link_properties_widget.hpp  llm_chat_widget.hpp  local_ai_status_widget.hpp  mcp_explorer_panel.hpp  message_inspector_panel.hpp  minimap_panel.hpp  mission_map_view.hpp  mission_planner_panel.hpp  network_topology_panel.hpp  node_health_dashboard.hpp  node_templates_panel.hpp  ollama_settings_widget.hpp  output_panel.hpp  param_dashboard.hpp  (+39 more)
src/ros_weaver/include/ros_weaver/wizards/: mcp_server_wizard.hpp  package_wizard.hpp  robot_wizard.hpp
src/ros_weaver/src/: main.cpp  main_window.cpp
src/ros_weaver/src/canvas/: canvas_annotation.cpp  connection_line.cpp  node_group.cpp  package_block.cpp  weaver_canvas.cpp
src/ros_weaver/src/cli/: ekf_analyzer_cli.cpp  ekf_analyzer_main.cpp
src/ros_weaver/src/core/: ai_context_provider.cpp  ai_error_advisor.cpp  ai_tool_manager.cpp  architecture_diff.cpp  architecture_doc_generator.cpp  architecture_generator.cpp  architecture_optimizer.cpp  bag_manager.cpp  bag_recorder.cpp  behavior_tree_parser.cpp  canvas_mapper.cpp  caret_importer.cpp  code_generator.cpp  context_help.cpp  data_lineage.cpp  dot_importer.cpp  ekf_metrics_analyzer.cpp  ekf_parameter_sweep.cpp  ekf_simulation_engine.cpp  error_handler.cpp  external_editor.cpp  generic_message_handler.cpp  git_integration.cpp  graph_exporter.cpp  latency_tracker.cpp  launch_file_generator.cpp  layout_algorithms.cpp  lifecycle_manager.cpp  lineage_provider.cpp  live_param_validator.cpp  mcp_manager.cpp  mcp_providers.cpp  mcp_server.cpp  mission_data.cpp  nav2_exporter.cpp  network_topology_manager.cpp  node_health_monitor.cpp  node_templates.cpp  ollama_manager.cpp  parameter_preset.cpp  (+19 more)
src/ros_weaver/src/core/undo/: mission_undo_commands.cpp  mission_undo_stack.cpp  scenario_undo_commands.cpp  scenario_undo_stack.cpp  undo_command.cpp  undo_stack.cpp  urdf_undo_commands.cpp
src/ros_weaver/src/widgets/: advanced_search_panel.cpp  ai_permission_dialog.cpp  architecture_doc_dialog.cpp  behavior_tree_panel.cpp  bookmark_manager.cpp  bt_node_item.cpp  canvas_tab_widget.cpp  command_palette.cpp  connection_stats_dialog.cpp  diagnostics_panel.cpp  diff_view_dialog.cpp  dock_drop_overlay.cpp  ekf_config_editor.cpp  ekf_path_visualizer.cpp  ekf_results_panel.cpp  ekf_tuner_panel.cpp  empty_state.cpp  guided_tour.cpp  help_browser.cpp  issue_list_panel.cpp  joint_properties_widget.cpp  keyboard_shortcuts_dialog.cpp  latency_heatmap_panel.cpp  launch_preview_dialog.cpp  lifecycle_panel.cpp  lineage_dialog.cpp  link_properties_widget.cpp  llm_chat_widget.cpp  local_ai_status_widget.cpp  mcp_explorer_panel.cpp  message_inspector_panel.cpp  minimap_panel.cpp  mission_map_view.cpp  mission_planner_panel.cpp  network_topology_panel.cpp  node_health_dashboard.cpp  node_templates_panel.cpp  ollama_settings_widget.cpp  output_panel.cpp  param_dashboard.cpp  (+39 more)
src/ros_weaver/src/wizards/: mcp_server_wizard.cpp  package_wizard.cpp  robot_wizard.cpp
src/ros_weaver/test/: test_architecture_optimizer.cpp  test_bag_manager.cpp  test_canvas_mapper.cpp  test_caret_importer.cpp  test_code_generator.cpp  test_data_lineage.cpp  test_dot_importer.cpp  test_graph_exporter.cpp  test_lineage_provider.cpp  test_playback_animator.cpp  test_project.cpp  test_slam_pipeline_manager.cpp  test_static_analyzer.cpp  test_theme_manager.cpp  test_topic_monitor.cpp  test_undo_stack.cpp  test_urdf_parser.cpp
src/ros_weaver/test/fixtures/: simple_robot.urdf
(+53 files in other folders)
