<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_weaver</name>
  <version>0.1.0</version>
  <description>Visual tool for assembling, extending, and iterating on ROS2 packages and nodes</description>
  <maintainer email="user@example.com">ROS Weaver Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Qt dependencies -->
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5charts5-dev</build_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5charts5</exec_depend>

  <!-- YAML parsing -->
  <depend>yaml-cpp</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
